# Vector-SDK

./: .gitignore  ADVANCED.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  TROUBLESHOOTING.md
examples/: Cargo.toml
examples/src/: main.rs
nostr_library/: Cargo.toml
nostr_library/src/: client.rs  crypto.rs  lib.rs  subscription.rs  upload.rs
src/: client.rs  crypto.rs  lib.rs  metadata.rs  mls.rs  subscription.rs  upload.rs  wasm.rs  wasm_lib.rs
tests/: bot_tests.rs  compatibility_tests.rs  crypto_tests.rs  direct_message_tests.rs  error_tests.rs  file_tests.rs  lib.rs
vector_library/: Cargo.toml
vector_library/src/: client.rs  crypto.rs  lib.rs  metadata.rs  subscription.rs  upload.rs
