[package]
name = "vector_sdk"
version = "0.2.1"
edition = "2021"
description = "Rust SDK for building Vector bots"
license = "MIT"
readme = "README.md"
keywords = ["nostr", "sdk", "bot", "crypto", "async"]
categories = ["network-programming", "asynchronous", "cryptography", "api-bindings"]
rust-version = "1.75"

[dependencies]
nostr-sdk = { version = "0.43", features = ["nip04", "nip06", "nip44", "nip59", "nip96"] }
nostr-blossom = "0.43.0"

mdk-core = { git = "https://github.com/parres-hq/mdk", rev = "f46875ec6fbe1cd616e9dfb4d2aa10f56044e58c" }
mdk-sqlite-storage = { git = "https://github.com/parres-hq/mdk", rev = "f46875ec6fbe1cd616e9dfb4d2aa10f56044e58c" }
mdk-storage-traits = { git = "https://github.com/parres-hq/mdk", rev = "f46875ec6fbe1cd616e9dfb4d2aa10f56044e58c" }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.117"
aes = "0.8.4"
aes-gcm = "0.10.3"
generic-array = "0.14.7"
hex = "0.4.3"
reqwest = { version = "0.12.20", features = ["rustls-tls", "stream", "blocking", "json", "multipart"] }
tokio = { version = "1.46.1", features = ["full"] }
futures-util = "0.3.31"
once_cell = "1.21.3"
sha2 = "0.10.9"
log = "0.4.22"
thiserror = "1.0.61"
rand = "0.8.5"
url = "2"
mime_guess = "2"
magical_rs = "0.4.5"

base64 = "0.22.1"
