[package]
name = "vector_sdk"
version = "0.3.0"
edition = "2021"
description = "Rust SDK for building Vector bots"
license = "MIT"
readme = "README.md"
keywords = ["nostr", "sdk", "bot", "crypto", "async"]
categories = ["network-programming", "asynchronous", "cryptography", "api-bindings"]
rust-version = "1.75"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nostr-sdk = { version = "0.43", features = ["nip04", "nip06", "nip44", "nip59", "nip96"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.46.1", features = ["rt"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen-futures = "0.4"

[dev-dependencies]
tempfile = "3.15.0"
mockall = "0.13.1"
serial_test = "3.2.0"
